@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.276 (gritter) 11/6/04
+.\"     Sccsid: @(#)nail.1	2.277 (gritter) 11/7/04
 .\"
-.TH NAIL 1 "11/6/04" "nail 11.15" "User Commands"
+.TH NAIL 1 "11/7/04" "nail 11.15" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -1708,13 +1708,19 @@ as a draft.
 .B unflag
 Takes a message list and marks each message as not being `flagged'.
 .TP
+.B ungood
+Takes a message list and undoes the effect of a
+.I good
+command that was previously applied on exactly these messages.
+.TP
 .B unignore
 Removes the header field names
 from the list of ignored fields.
 .TP
 .B unjunk
-A synonym for
-.IR good .
+Takes a message list and undoes the effect of a
+.I junk
+command that was previously applied on exactly these messages.
 .TP
 .B unkill
 Takes a message list and `unkills' each message.
