@@ -16,6 +16,10 @@
   prepended to older fields as specified.
 * A 'seen' command has been introduced; it takes a message list and marks the
   messages as having been read.
+* The semantics of the 'unjunk' command have been changed; it is now exactly
+  the opposite of the 'junk' command and undoes its effects. An 'ungood'
+  command has also been introduced to do the same for a previous 'good'
+  command.
 * Since many versions of Linux do not correctly update the modification time
   of a file with mmap(), utime() is now called to force an update when the
   junk mail database is changed.
